forms-flow-analytics/infra/test/service_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-analytics-svc
  namespace: forms-flow-analytics
  labels:
    app.kubernetes.io/name: formsflowanalytics
spec:
  selector:
    app.kubernetes.io/name: formsflowanalytics
  ports:
    - name: forms-flow-analytics-port
      protocol: TCP
      port: 5000
      targetPort: 7000
